[package]
name = "claude_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/claude_storage"
description = "CLI tool for exploring Claude Code filesystem storage"
keywords = [ "claude", "storage", "cli", "conversation", "tool" ]
categories = [ "development-tools", "command-line-utilities" ]

[lints]
workspace = true

[dependencies]
# Core library for all storage operations
claude_storage_core = { workspace = true }

# CLI dependencies (optional, only for binary)
# NOTE: Do NOT add phf as direct dep - unilang re-exports phf (0.11) and adding phf 0.13 causes version conflict
unilang = { workspace = true, optional = true, features = [ "approach_yaml_multi_build" ] }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }

[build-dependencies]
serde_yaml = { workspace = true }
unilang = { workspace = true, features = [ "approach_yaml_multi_build" ] }

[[bin]]
name = "claude_storage"
path = "src/main.rs"
required-features = [ "cli" ]

[[bin]]
name = "clg"
path = "src/bin/clg.rs"
required-features = [ "cli" ]

[[test]]
name = "behavior"
path = "tests/behavior/mod.rs"

[features]
default = [ "enabled", "cli" ]
enabled = []
full = [ "enabled", "cli" ]
cli = [ "dep:unilang" ]
