[package]
name = "claude_storage_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/claude_storage_core"
description = "Core library for Claude Code filesystem storage access (zero dependencies)"
keywords = [ "claude", "storage", "jsonl", "conversation", "parser" ]
categories = [ "development-tools", "filesystem", "parsing" ]

[lints]
workspace = true

[dependencies]
# ZERO runtime dependencies - this is a core guarantee

[features]
default = [ "enabled" ]
enabled = []
full = [ "enabled" ]

[dev-dependencies]
tempfile = { workspace = true }
