[package]
name = "claude_version_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "readme.md"
description = "Layer 1 domain helpers: version management, settings I/O, and install utilities"

[lints]
workspace = true

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = []

[dependencies]
claude_common = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true, features = [ "full" ] }
tempfile   = { workspace = true }
