[package]
name = "claude_version_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/claude_version_core"
description = "Layer 1 domain helpers: version management, settings I/O, and install utilities"
keywords = [ "claude", "ai", "version", "install", "settings" ]
categories = [ "development-tools" ]

[lints]
workspace = true

[features]
default = [ "enabled" ]
full = [ "enabled" ]
enabled = []

[dependencies]
claude_core = { workspace = true }

[dev-dependencies]
test_tools = { workspace = true, features = [ "full" ] }
tempfile   = { workspace = true }
