[package]
name        = "dream"
version     = "1.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme      = "readme.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/dream"
description = "Feature-gated library facade re-exporting coding agent core crates under domain modules"
keywords = [ "ai", "agent", "facade", "toolkit", "library" ]
categories = [ "development-tools" ]

[lints]
workspace = true

[features]
default = []
common  = [ "dep:claude_core" ]
storage = [ "dep:claude_storage_core" ]
profile = [ "dep:claude_profile_core" ]
runner  = [ "dep:claude_runner_core" ]
version = [ "dep:claude_version_core" ]
assets  = [ "dep:claude_assets_core" ]
full    = [ "common", "storage", "profile", "runner", "version", "assets" ]
enabled = [ "full" ]

[dependencies]
claude_core       = { workspace = true, optional = true }
claude_storage_core = { workspace = true, optional = true }
claude_profile_core = { workspace = true, optional = true }
claude_runner_core  = { workspace = true, optional = true, features = [ "enabled" ] }
claude_version_core = { workspace = true, optional = true }
claude_assets_core  = { workspace = true, optional = true }

[[test]]
name = "integration"
path = "tests/integration/facade_test.rs"
