[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "example-lib"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
cache_dir = "/tmp/pytest_cache"
